5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1807_2567.log
== TEST (2019-06-07 08:56:28) 
-- CODE:
Qast = int(input("quantidade de asteriscos"))
ast = "*"
QA1 =  ast * Qast
for i in range(0,QA1) :
	print(QA1)
	print(QA1 - 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    for i in range(0,QA1) :
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 08:57:02) 
-- CODE:
Qast = int(input("quantidade de asteriscos"))
ast = "*"
QA1 =  ast * Qast
for i in range(0,size(QA1)) :
	print(QA1)
	print(QA1 - 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    for i in range(0,size(QA1)) :
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 08:57:32) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos"))
ast = "*"
QA1 =  ast * Qast
for i in range(0,size(QA1)) :
	print(QA1)
	print(QA1 - 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 08:57:57) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos"))
ast = "*"
QA1 =  ast * Qast
for i in range(0,size(QA1)) :
	print(QA1)
	print(QA1 - "*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 08:58:17) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos"))
ast = "*"
QA1 =  ast * Qast
for i in range(0,size(QA1)) :
	print(QA1)
	print(QA1 - ast)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 08:58:32) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos"))
ast = "*"
QA1 =  ast * Qast
for i in range(0,size(QA1)) :
	print(QA1)
	#print(QA1 - ast)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 08:58:59) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos"))
ast = "*"
QA1 =  ast * Qast-1
for i in range(0,size(QA1)) :
	print(QA1)
	#print(QA1 - ast)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 08:59:29) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos"))
ast = "*"
QA1 =  ast * (Qast-1)
for i in range(0,size(QA1)) :
	print(QA1)
	#print(QA1 - ast)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:00:52) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos"))
ast = "*"
print(QA1)
QA1 =  ast * (Qast-1)
for i in range(0,size(QA1)) :
	QA1 =  ast * (Qast-1)
	print(QA1)
	#print(QA1 - ast)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:01:02) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos"))
ast = "*"
print(QA1)
QA1 =  ast * (Qast-1)
for i in range(0,size(QA1)) :
	QA1 =  ast * (Qast-1)
	print(QA1)
	#print(QA1 - ast)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:01:29) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos"))
ast = "*"
QA1 =  ast * (Qast)
print(QA1)
QA1 =  ast * (Qast-1)
for i in range(0,size(QA1)) :
	QA1 =  ast * (Qast-1)
	print(QA1)
	#print(QA1 - ast)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:02:23) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
print(QA1)
QA1 =  ast * (Qast-1)
for i in range(0,size(QA1)) :
	QA1 =  ast * (Qast-1)
	print(QA1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:03:44) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
print(QA1)
QA1 =  ast * (Qast-1)
for i in range(0,size(QA1)) :
	QA1 =  ast * (Qast)
	Qast = Qast - 1
	print(QA1)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:04:27) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"

for i in range(0,size(QA1)) :
	QA1 =  ast * (Qast)
	Qast = Qast - 1
	print(QA1)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:05:05) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
for i in range(0,size(QA1)) :
	QA1 =  ast * (Qast)
	Qast = Qast - 1
	print(QA1)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:06:23) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"

for i in range(0,size(QA1)) :
	QA1 =  ast * Qast
	print(QA1)
	Qast = Qast - 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:06:49) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
for i in range(0,size(QA1)) :
	QA1 =  ast * Qast
	print(QA1)
	Qast = Qast - 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:09:14) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
print(QA1)
for i in range(0,size(QA1)) :
	QA1 =  ast * (Qast-1)
	print(QA1)
	Qast = Qast - 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:09:44) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
print(QA1)
for "*" in range(0,size(QA1)) :
	QA1 =  ast * (Qast-1)
	print(QA1)
	Qast = Qast - 1
	
	
-- ERROR:
File "XXXX", line 6
    for "*" in range(0,size(QA1)) :
       ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:47:55) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
print(QA1)
for sch in range(0,size(QA1)) :
	QA1 =  ast * (Qast-1)
	print(QA1)
	Qast = Qast - 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:48:48) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
print(QA1)
for sch in range(0,len(QA1)) :
	QA1 =  ast * (Qast-1)
	print(QA1)
	Qast = Qast - 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:51:57) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
print(QA1)
for sch in range(0,len(QA1)) :
	QA1 =  ast * (Qast-1)
	print(QA1)
	Qast = Qast - 1
for sch in range(0,len(QA1)):
	print(QA1)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:52:38) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
print(QA1)
for sch in range(0,len(QA1)) :
	QA1 =  ast * (Qast-1)
	print(QA1)
	Qast = Qast - 1
#for sch in range(0,len(QA1)):
print(QA1)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:54:29) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
print(QA1)
for sch in range(0,len(QA1)) :
	QA1 =  ast * (Qast-1)
	print(QA1)
	Qast = Qast - 1
print(QA1)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:55:45) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
print(QA1)
for ch in range(0,len(QA1)) :
	QA1 =  ast * (Qast-1)
	print(QA1)
	Qast = Qast - 1
print(QA1)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:56:28) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
print(QA1)
for ch in range(0,len(QA1)) :
	QA1 =  ast * (Qast-1)
	print(QA1)
	Qast = Qast - 1
print(QA1 + 1)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 09:57:15) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
print(QA1)
for ch in range(0,len(QA1)) :
	QA1 =  ast * (Qast-1)
	print(QA1)
	Qast = Qast - 1
print(Qast)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 10:03:02) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
print(QA1)
for ch in range(0,len(QA1)) :
	if(Qast >= 2):
		QA1 =  ast * (Qast-1)
		print(QA1)
		Qast = Qast - 1
print(Qast)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 10:03:12) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
print(QA1)
for ch in range(0,len(QA1)) :
	if(Qast >= 2):
		QA1 =  ast * (Qast-1)
		print(QA1)
		Qast = Qast - 1
print(Qast)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 10:07:09) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
t = len(QA1)
print(QA1)
for ch in range(0,len(QA1)) :
	if(Qast >= 2):
		QA1 =  ast * (Qast-1)
		print(QA1)
		Qast = Qast - 1
print(QA1)
print(t)
#for ch in range(0,len(QA1)):
#	if Qast <= t
#print(Qast)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 10:09:14) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
t = len(QA1)
print(QA1)
for ch in range(0,len(QA1)) :
	if(Qast >= 2):
		QA1 =  ast * (Qast-1)
		print(QA1)
		Qast = Qast - 1
print(QA1)

for ch in range(0,len(QA1)):
	if Qast <= t :
		QA1 = ast * (Qast + 1)
		print(Qast)
		Qast = Qast + 1
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 10:09:34) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
t = len(QA1)
print(QA1)
for ch in range(0,len(QA1)) :
	if(Qast >= 2):
		QA1 =  ast * (Qast-1)
		print(QA1)
		Qast = Qast - 1
print(QA1)

for ch in range(0,len(QA1)):
	if Qast <= t :
		QA1 = ast * (Qast + 1)
		print(QA1)
		Qast = Qast + 1
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 10:10:18) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
t = len(QA1)
print(QA1)
for ch in range(0,len(QA1)) :
	if(Qast >= 2):
		QA1 =  ast * (Qast-1)
		print(QA1)
		Qast = Qast - 1
print(QA1)

for ch in range(0,t):
	if Qast <= t :
		QA1 = ast * (Qast + 1)
		print(QA1)
		Qast = Qast + 1
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 10:11:10) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
t = len(QA1)
print(QA1)
for ch in range(0,len(QA1)) :
	if(Qast >= 2):
		QA1 =  ast * (Qast-1)
		print(QA1)
		Qast = Qast - 1
print(QA1)

for ch in range(0,t):
	if Qast <= (t-1) :
		QA1 = ast * (Qast + 1)
		print(QA1)
		Qast = Qast + 1
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 10:11:30) 
-- CODE:
from numpy import*
Qast = int(input("quantidade de asteriscos:"))
ast = "*"
QA1 =  ast * (Qast)
t = len(QA1)
print(QA1)
for ch in range(0,len(QA1)) :
	if(Qast >= 2):
		QA1 =  ast * (Qast-1)
		print(QA1)
		Qast = Qast - 1
print(QA1)

for ch in range(0,t):
	if Qast <= (t-1) :
		QA1 = ast * (Qast + 1)
		print(QA1)
		Qast = Qast + 1
	
	
	
-- EXECUTION TIME:
1.24713
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
